--- a/运算符.md
+++ b/运算符.md
@@ -17,3 +17,9 @@
 
 && 对于这个， 如果左边是假的时候 ，右边就不会执行，因此如果右边是算数 ，就不会执行里面的内容，因为结果一定是假
 || 如果左边是真的时候，右边就不会执行，因为结果一定是真
+
+
+## 流程控制
+1. 流程控制： 代码执行的顺序
+
+类型： 顺序， 选择， 循环
