--- a/运算符.md
+++ b/运算符.md
@@ -23,3 +23,24 @@
 1. 流程控制： 代码执行的顺序
 
 类型： 顺序， 选择， 循环
+
+## 自增自减
+
+++ -- 
+分为前自增 ++i，和后自增 i++  ： 都是把i加一
+不同点： 前自增整体表达式的值是 i + 1 之后的值
+ 但是 后自增是 i + 1 之前的值
+ 
+ eg    
+   
+     
+     int i, k, j, m;
+     i = j = 3;
+     k = i++;
+     m = ++j;
+     printf("%d %d %d %d", i,j,k,m); // i j m 都是 4， 只有k还是3
+
+出现原因：代码更精炼，同时 速度更快，直接在寄存器里面处理i++
+要明白的问题：
+ 编程尽量屏蔽掉两者的差别
+ 自增表达式最好不要作为一个更大的表达式的一部分来使用 （不同机器结果不一样）
