--- a/运算符.md
+++ b/运算符.md
@@ -44,3 +44,14 @@
 要明白的问题：
  编程尽量屏蔽掉两者的差别
  自增表达式最好不要作为一个更大的表达式的一部分来使用 （不同机器结果不一样）
+
+
+## 三目运算符
+a?b:c
+
+## 逗号
+a,b,c,d
+从左到右执行： 最终表达式的值是 最后一项的值
+int j = 2;
+i = (j++, ++j, j+ 2, j-3); // j +2 并没有把值复制给j，所以j就只是4
+i就是 1
