--- a/结构体.md
+++ b/结构体.md
@@ -5,7 +5,7 @@
       int age;
       float score;
       char sex;
-    }
+    }; // 这里的分号不能省
     
     int main(void){
       struct Student st = {80,86.6,'F'};
@@ -24,3 +24,9 @@
 
 pst-age 的含义是 pst所指向的结构体变量中age这个成员 
     
+## 在函数中使用结构体
+这时候就需要用到指针，减少内存耗费和执行速度，因此推荐发送内存地址给函数，&student:
+
+## 变量的运算
+无法加减乘除，但是可以相互赋值
+eg st1 = st2
