--- a/进制.md
+++ b/进制.md
@@ -1,7 +1,19 @@
 ## 十进制转换成n进制：
 数字除n 取余， 商继续取余，然后 把余数反过来连在一起就是 n进制的值
+二进制  (185) 10 = 10111001 的二进制， 是把余数倒过来写
+(11)10 = 1011 
 
+总结，求商取余
 
 ## n进制换换成十进制：
 每个位数位置从0开始的a乘以 n的a次方乘当前位置的数
 
+(371)8 = 1* 8 + 7 * 8^1 + 3* 8 ^2 = 249
+
+printf("%#ox") 会在前面有标记
+
+
+## 二进制转换成16进制
+
+就需要先补0成4的倍数个，
+每4个代表一个数字
